# gpt-video-summarizer

./: .gitignore  main.py  pyproject.toml
services/: audio_service.py  gpt_service.py  prompt_chain_service.py  transcribe_service.py
temlplates_prompt_chains/: summarize_video_prompt_chain.txt
usecases/: summarize_video_usecase.py
